syntax = "proto3";
package loan.loan;

// this line is used by starport scaffolding # proto/tx/import

option go_package = "loan/x/loan/types";

// Msg defines the Msg service.
service Msg {
      rpc Request(MsgRequest) returns (MsgRequestResponse);
  rpc RequestLoan(MsgRequestLoan) returns (MsgRequestLoanResponse);
// this line is used by starport scaffolding # proto/tx/rpc
}

message MsgRequest {
  string creator = 1;
  string loan = 2;
}

message MsgRequestResponse {
}

message MsgRequestLoan {
  string creator = 1;
  string amount = 2;
  string fee = 3;
  string collateral = 4;
  string deadline = 5;
}

message MsgRequestLoanResponse {
}

// this line is used by starport scaffolding # proto/tx/message
